Update according to the review.

--- a/pom.xml
+++ b/pom.xml
@@ -15,11 +15,35 @@
         <selenium.java>3.141.59</selenium.java>
     </properties>
 
+    <profiles>
+        <profile>
+            <id>hw1</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <suite.xml>src/test/resources/hw1_profile.xml</suite.xml>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>hw2</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <suite.xml>src/test/resources/hw2_profile.xml</suite.xml>
+            </properties>
+        </profile>
+    </profiles>
+
     <dependencies>
         <dependency>
             <groupId>com.epam.tat.module4</groupId>
             <artifactId>calculator</artifactId>
             <version>${calculator.version}</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/test/resources/calculator-1.0.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>org.testng</groupId>
