Added comments for the HW2 #1

--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,7 @@
         </dependency>
     </dependencies>
 
+    <!-- TODO Where is maven compiler plugin ??? -->
     <build>
         <plugins>
             <plugin>
