Added comments for the HW2 #2

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ target/generated-sources
 target/generated-test-sources
 target/surefire-reports
 target/test-classes
+# TODO Why do you not include iml file?
