--- a/src/test/resources/properties/elements.properties
+++ b/src/test/resources/properties/elements.properties
@@ -2,4 +2,5 @@ index.page.images.count = 4
 index.page.text.labels.count = 4
 check.boxes.count = 4
 radiobuttons.count = 4
+dropdowns.count = 1
 buttons.count = 2
