--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <lombok.version>1.18.8</lombok.version>
         <aspectj.version>1.8.10</aspectj.version>
         <allure.version>2.12.0</allure.version>
+        <cucumber.version>1.2.5</cucumber.version>
     </properties>
 
     <profiles>
@@ -65,10 +66,19 @@
         <profile>
             <id>hw5</id>
             <activation>
-                <activeByDefault>true</activeByDefault>
+                <activeByDefault>false</activeByDefault>
             </activation>
             <properties>
                 <suite.xml>src/test/resources/hw5_profile.xml</suite.xml>
+            </properties>
+        </profile>
+        <profile>
+            <id>hw6</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <suite.xml>src/test/resources/hw6_profile.xml</suite.xml>
             </properties>
         </profile>
     </profiles>
@@ -123,6 +133,18 @@
             <artifactId>jackson-annotations</artifactId>
             <version>2.9.9</version>
         </dependency>
+        <dependency>
+            <groupId>info.cukes</groupId>
+            <artifactId>cucumber-java</artifactId>
+            <version>${cucumber.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>info.cukes</groupId>
+            <artifactId>cucumber-testng</artifactId>
+            <version>${cucumber.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -156,6 +178,16 @@
                         <groupId>org.aspectj</groupId>
                         <artifactId>aspectjweaver</artifactId>
                         <version>${aspectj.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>info.cukes</groupId>
+                        <artifactId>cucumber-testng</artifactId>
+                        <version>${cucumber.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>info.cukes</groupId>
+                        <artifactId>cucumber-java</artifactId>
+                        <version>${cucumber.version}</version>
                     </dependency>
                 </dependencies>
             </plugin>
